Tests/resources/errors/nullDict.poc
attribute name: Text;
attribute text: Text; 

native method print ( Text value ) {
	Java: System.out.print(value);
	C#: System.Console.Write(value);
	Python2: print(objects=value,end="")
	Python3: print(objects=value,end="")
	JavaScript: process.stdout.write(value);
}

enumerated category Error(name,text) {
	DIVIDE_BY_ZERO ( text = "Divide by zero!" ); 
	INDEX_OUT_OF_RANGE (text= "Index out of range!");
	NULL_REFERENCE (text = "Null reference!" ); 
}

method main ( Text{} options ) {
	try(error) {
		s = options;
		s = null;
		x = s["a"];
		print ( "Should fail!" );
	} catch ( NULL_REFERENCE ) {
		print (error.text);
	}
}
